--- a/Terningspill/index.html
+++ b/Terningspill/index.html
@@ -33,7 +33,7 @@
     <h2 id="3OfAKind">3 of a kind:</h2>
     <h2 id="4OfAKind">4 of a kind:</h2>
     <h2 id="smallStraight">Small straight:</h2>
-    <h2 id="bigstraight">Big Straight:</h2>
+    <h2 id="bigStraight">Big straight:</h2>
     <h2 id="house">House:</h2>
     <h2 id="chance">Chance:</h2>
     <h2 id="Yatzy">Yatzy:</h2>
